First working version index.html

--- a/individual_site/index.html
+++ b/individual_site/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1655b4a318.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="bootstrap/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -51,9 +51,9 @@
             </div>
         </div>
     </div>
-    <div class="bg-dark text-center text-light p-2 fw-bold fs-5">Достопримечательности Венеции</div>
-    <div class="cards container-fluid bg-dark pt-5">
-        <div class="row bg-dark row-flex">
+    <div class="bg-dark text-center text-light fw-bold fs-1 py-5">Достопримечательности Венеции</div>
+    <div class="cards container-fluid bg-dark ">
+        <div class="row bg-dark same-el">
             <div class="col-lg-6 col-sm-12">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
@@ -78,12 +78,12 @@
             <div class="col-lg-6 col-sm-12">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
-                        <a href="#"><img src="img/St-Mark.jpg" alt="" class="rounded-circle"></a>
+                        <a href="#"><img src="img/St-Mark.jpg" alt="" class="rounded-circle w-100"></a>
                     </div>
                     <div class="info-details">
                         <h4><a href="#">Площадь Святого Марка</a></h4>
                         <p class="fst-italic">Визитная карточка города, Сан-Марко являет собой одну из главных достопримечательностей Италии. Именно здесь находятся лучшие достопримечательности Венеции и проходят самые культовые мероприятия этого города. А начинается она с двух величественных колонн, на которых расположились статуи апостола Марка и крылатого льва.</p>
-                        <div class="info-bottom-details d-flex justify-content-between">
+                        <div class="info-bottom-details d-flex justify-content-between h-auto">
                             <div class="date">
                                 Дата основания:
                                 <span>01.01.1970</span>
@@ -99,17 +99,17 @@
             <div class="col-lg-6 col-sm-12">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
-                        <a href="#"><img src="img/Grand-Canal.jpg" alt="" class="rounded-circle"></a>
+                        <a href="#"><img src="img/7-Santa_Maria_Gloriosa_dei_Frari-e1527216127496.jpg" alt="" class="rounded-circle"></a>
                     </div>
                     <div class="info-details">
-                        <h4><a href="#">Гранд-канал</a></h4>
-                        <p class="fst-italic">Самый большой и красивый канал в городе. Можно сказать, его центральный проспект, длина которого 4 км. При обзоре с прогулочного катера открываются поистине открыточные виды – колоритные особняки, торжественные палаццо, красивые соборы. Да и виды на канал, который проходит через весь город, тоже весьма живописны.</p>
+                        <h4><a href="#">Собор Санта-Мария-Глориоза-деи-Фрари</a></h4>
+                        <p class="fst-italic">Храм появился в городе в 14 веке, в своей архитектуре он, как и многие достопримечательности в Венеции, сочетает сразу несколько стилей, основные из которых – готический, венецианский и византийский. Богатая Венеция пригласила лучших в те времена мастеров для оформления интерьера собора. Многие туристы знают, что посмотреть в этом соборе в Венеции можно картину «Мадонна Пезаро» гениального Тициана и скульптуру Иоанна Крестителя великого средневекового мастера Донателло.</p>
                         <div class="info-bottom-details d-flex justify-content-between">
                             <div class="date">
                                 Дата основания:
                                 <span>01.01.1970</span>
                             </div>
-                            <div class="info-links">
+                            <div class="info-links ">
                                 <a href="#"><i class="fa-solid fa-share"></i></a>
                                 <a href="#"><i class="far fa-heart"></i></a>
                             </div>
@@ -120,15 +120,15 @@
             <div class="col-lg-6 col-sm-12">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
-                        <a href="#"><img src="img/Grand-Canal.jpg" alt="" class="rounded-circle"></a>
+                        <a href="#"><img src="img/8-San_Giorgio_Maggiore_Island-e1529737857995.jpg" alt="" class="rounded-circle"></a>
                     </div>
                     <div class="info-details">
-                        <h4><a href="#">Гранд-канал</a></h4>
-                        <p class="fst-italic">Самый большой и красивый канал в городе. Можно сказать, его центральный проспект, длина которого 4 км. При обзоре с прогулочного катера открываются поистине открыточные виды – колоритные особняки, торжественные палаццо, красивые соборы. Да и виды на канал, который проходит через весь город, тоже весьма живописны.</p>
+                        <h4><a href="#">Остров Сан-Джорджо-Маджоре</a></h4>
+                        <p class="fst-italic">Вопроса, куда сходить в Венеции на острове Сан-Джорджо-Маджоре, обычно не возникает. Его главная достопримечательность – одноименная церковь. Еще в 10 веке остров стал собственностью бенедиктинцев, они возвели здесь храм и монастырь, которые разрушило землетрясение в 13 веке. И лишь к началу 16 века появилась новая церковь, построенная в ренессансном стиле, она находится на острове и сейчас. При посещении обязательно стоит осмотреть внутренние стены, которые украшают произведения Тинторетто, в частности, «Последний ужин» и «Манна небесная».</p>
                         <div class="info-bottom-details d-flex justify-content-between">
                             <div class="date">
                                 Дата основания:
-                                <span>01.01.1970</span>
+                                <span class="fw-bold">01.01.1970</span>
                             </div>
                             <div class="info-links">
                                 <a href="#"><i class="fa-solid fa-share"></i></a>
@@ -141,5 +141,40 @@
         </div>
     </div>
 </section>
+
+<footer>
+    <section class="footer bg-dark">
+        <div class="container-fluid">
+            <div class="row row-cols-sm-2 row-cols-lg-3">
+                <div class="col">
+                    <h4>Информация</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Главная</a></li>
+                        <li><a href="#">Наши другие сайты</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Контакты</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="tel:123456740">123 4567-40</a></li>
+                        <li><a href="tel:123456751">123 4567-51</a></li>
+                        <li><a href="tel:123456762">123 4567-62</a></li>
+                        <li><a href="tel:123456773">123 4567-73</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Мы в сети</h4>
+                    <ul class="footer-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-telegram"></i></a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+</footer>
+
 </body>
 </html>
