--- a/individual_site/index.html
+++ b/individual_site/index.html
@@ -60,6 +60,7 @@
                         <a href="#"><img src="img/Grand-Canal.jpg" alt="" class="rounded-circle"></a>
                     </div>
                     <div class="info-details">
+                        <div class="info-main-details"></div>
                         <h4><a href="#">Гранд-канал</a></h4>
                         <p class="fst-italic">Самый большой и красивый канал в городе. Можно сказать, его центральный проспект, длина которого 4 км. При обзоре с прогулочного катера открываются поистине открыточные виды – колоритные особняки, торжественные палаццо, красивые соборы. Да и виды на канал, который проходит через весь город, тоже весьма живописны.</p>
                         <div class="info-bottom-details d-flex justify-content-between">
@@ -78,12 +79,12 @@
             <div class="col-lg-6 col-sm-12">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
-                        <a href="#"><img src="img/St-Mark.jpg" alt="" class="rounded-circle w-100"></a>
+                        <a href="#"><img src="img/St-Mark.jpg" alt="" class="rounded-circle"></a>
                     </div>
                     <div class="info-details">
                         <h4><a href="#">Площадь Святого Марка</a></h4>
                         <p class="fst-italic">Визитная карточка города, Сан-Марко являет собой одну из главных достопримечательностей Италии. Именно здесь находятся лучшие достопримечательности Венеции и проходят самые культовые мероприятия этого города. А начинается она с двух величественных колонн, на которых расположились статуи апостола Марка и крылатого льва.</p>
-                        <div class="info-bottom-details d-flex justify-content-between h-auto">
+                        <div class="info-bottom-details d-flex justify-content-between">
                             <div class="date">
                                 Дата основания:
                                 <span>01.01.1970</span>
