Add share and history

--- a/individual_site/history.html
+++ b/individual_site/history.html
@@ -25,13 +25,13 @@
             </span>
       <ul class="navbar-nav me-1 ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+          <a class="nav-link" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="history.html">История</a>
+          <a class="nav-link active" href="history.html">О городе</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="share.html">Поделиться воспоминанием</a>
+          <a class="nav-link" href="share.html">Поделиться историей</a>
         </li>
       </ul>
 
@@ -39,30 +39,74 @@
   </div>
 </nav>
 <section class="main-content">
-  <div class="history container-fluid bg-dark">
-    <h1>
-      Город Венеция (Италия)
-    </h1>
-    <p>Венеция - один из самых известных городов Италии и центр одноименной области Венето, расположенной в северо-восточной части страны на берегу Адриатического моря. Она входит в список объектов Всемирного наследия ЮНЕСКО, являясь одним из самых уникальных и романтичных мест планеты. Венеция - потрясающий и сказочный город, исторический центр которого построен на 118 островах Венецианской лагуны и представляет собой невероятное сочетание лабиринта улиц-каналов и сотен мостов с изящной архитектурой роскошных дворцов и грандиозных церквей.</p>
-    <p>Венеция - город уникальных туристических аттракционов и мест, особой атмосферы и истории. Здесь можно совершить прогулку на традиционных лодках-гондолах и послушать песни гондольеров, погулять по Сан-Марко, увидеть Дворец Дожей, мост Риальто и яркие домики Бурано. Венеция - это город, который почти не изменился за последние шесть веков. Здесь всё также основным средством передвижения являются лодки, по каналам до сих пор плавают традиционные гондолы, пусть и ставшие лишь туристическим аттракционом, а на улицах нет автомобилей, что является просто невероятным явлением в современном мире.</p>
-    <p>Венеция расположена в акватории Адриатического моря практически на широте Краснодарского края. Исторический центр расположен на множестве островов, разделённых каналами и соединённых мостами, который называют "Sestieri". Он включает районы Каннареджо, Кастелло, Дорсодуро, Сан-Поло, Санта-Кроче и Сан-Марко, где расположены основные памятники и достопримечательности Венеции. Из других островов Венецианской лагуны следует выделить Мурано, Торчелло, Сан-Франческо-дель-Десерто и Бурано. Архитектура Венеции - это особый архитектурный стиль, который называют венецианским. Большинство памятников архитектуры и культуры было построено в период с 12 по 16 века.</p>
-    <p class="hint bg-secondary">Интересно, что большинство исторических зданий Венеции построено на сваях из альпийской лиственницы, которая практически не гниёт в воде.</p>
-    <img src="img/venice-italy-800x444.jpg" alt="">
-    <h6>Венецианский Гранд-Канал</h6>
+  <div class="history container-fluid bg-dark px-lg-5 px-sm-2">
+    <div class="chapter">
+      <h1>
+        Город Венеция (Италия)
+      </h1>
+      <p>Венеция - один из самых известных городов Италии и центр одноименной области Венето, расположенной в северо-восточной части страны на берегу Адриатического моря. Она входит в список объектов Всемирного наследия ЮНЕСКО, являясь одним из самых уникальных и романтичных мест планеты. Венеция - потрясающий и сказочный город, исторический центр которого построен на 118 островах Венецианской лагуны и представляет собой невероятное сочетание лабиринта улиц-каналов и сотен мостов с изящной архитектурой роскошных дворцов и грандиозных церквей.</p>
+      <p>Венеция - город уникальных туристических аттракционов и мест, особой атмосферы и истории. Здесь можно совершить прогулку на традиционных лодках-гондолах и послушать песни гондольеров, погулять по Сан-Марко, увидеть Дворец Дожей, мост Риальто и яркие домики Бурано. Венеция - это город, который почти не изменился за последние шесть веков. Здесь всё также основным средством передвижения являются лодки, по каналам до сих пор плавают традиционные гондолы, пусть и ставшие лишь туристическим аттракционом, а на улицах нет автомобилей, что является просто невероятным явлением в современном мире.</p>
+      <p>Венеция расположена в акватории Адриатического моря практически на широте Краснодарского края. Исторический центр расположен на множестве островов, разделённых каналами и соединённых мостами, который называют "Sestieri". Он включает районы Каннареджо, Кастелло, Дорсодуро, Сан-Поло, Санта-Кроче и Сан-Марко, где расположены основные памятники и достопримечательности Венеции. Из других островов Венецианской лагуны следует выделить Мурано, Торчелло, Сан-Франческо-дель-Десерто и Бурано. Архитектура Венеции - это особый архитектурный стиль, который называют венецианским. Большинство памятников архитектуры и культуры было построено в период с 12 по 16 века.</p>
+      <p class="hint bg-secondary">Интересно, что большинство исторических зданий Венеции построено на сваях из альпийской лиственницы, которая практически не гниёт в воде.</p>
+      <div class="img-block">
+        <img src="img/venice-italy-800x444.jpg" alt="">
+        <h6>Венецианский Гранд-Канал</h6>
+      </div>
+    </div>
+    <div class="chapter">
+      <h1>География и климат</h1>
+      <p>Венеция расположена на 118 островах Венецианской лагуны Адриатического моря. Острова разделяют 150 каналов и соединяют 400 мостов. Город является крупным морским курортом и одним из крупнейших итальянских морских портов.</p>
+      <div class="img-block">
+        <img src="img/piazza-san-marco-venice-italy-snow-VENICESNOW0318-800x500.jpg" alt="">
+        <h6>Венецианский Гранд-Канал</h6>
+      </div>
+      <p>Венеция расположена в зоне субтропического климата. Лето довольно жаркое, зима мягкая. Морозы и снег зимой бывают редко. Хотя в холодное время года здесь довольно зябко из-за близости моря. Вследствии нагонной волны в Венеции часто бывают наводнения.</p>
+      <p>К сожалению, этот уникальный город постепенно погружается под воду. По 4-5 мм каждый год. Только на протяжении 20 века Венеция ушла под воду на более чем 20 см. Уже через несколько десятилетий она может стать непригодной для жизни. Пока проект по спасению Венеции "MOSE", который предусматривает строительство дамб вокруг города, существенно эту ситуацию не исправил. </p>
+    </div>
+    <div class="chapter">
+      <h1>Информация для туристов</h1>
+      <div class="container">
+        <ul class="mx-auto">
+          <li>Население - 264.6 тысяч человек.</li>
+          <li>Площадь - 414.6 квадратных километров.</li>
+          <li>Язык - итальянский.</li>
+          <li>Валюта - евро.</li>
+          <li>Время - центральноевропейское UTC +1, летом +2.</li>
+          <li>Виза - шенгенская.</li>
+          <li>Рестораны работают с 12.00 до 22.00. Магазины с 10.00 до 19.00</li>
+          <li>Туристический налог составляет от 3,50 до 5 евро с человека.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="chapter">
+      <h1>Лучшее время посещения</h1>
+      <p>Худшее времена для посещения это время карнавала (очень дорого и много людей) и дождливое время поздней осени и зимы (холодно, ветрено и сыро). Летом может быть довольно жарко. Самым лучшим временем познакомиться с Венецией считается весна и осень.</p>
+      <div class="img-block">
+        <img src="img/silversea-mediterranean-cruise-venice-italy-2-800x533.jpg" alt="">
+        <h6>Гондола - традиционное венецианское средство передвижения</h6>
+      </div>
+    </div>
   </div>
-  <h1>География и климат</h1>
 </section>
 
 <footer>
   <section class="footer bg-dark">
     <div class="container-fluid">
-      <div class="row row-cols-sm-2 row-cols-lg-3">
+      <div class="row row-cols-md-2 row-cols-lg-4">
         <div class="col">
           <h4>Информация</h4>
           <ul class="list-unstyled">
             <li><a href="#">Главная</a></li>
             <li><a href="#">Наши другие сайты</a></li>
             <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <h4>Больше о Венеции</h4>
+          <ul class="list-unstyled">
+            <li><a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%B5%D1%86%D0%B8%D1%8F">Wiki</a></li>
+            <li><a href="https://planetofhotels.com/guide/ru/italiya/veneciya">Путеводитель</a></li>
+            <li><a href="https://www.pac.ru/guide/italy/veneto/venice/">Отдых в Венеции</a></li>
           </ul>
         </div>
         <div class="col">
