--- a/individual_site/index.html
+++ b/individual_site/index.html
@@ -27,10 +27,10 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="history.html">История</a>
+                    <a class="nav-link" href="history.html">О городе</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="share.html">Поделиться воспоминанием</a>
+                    <a class="nav-link" href="share.html">Поделиться историей</a>
                 </li>
             </ul>
 
@@ -146,13 +146,21 @@
 <footer>
     <section class="footer bg-dark">
         <div class="container-fluid">
-            <div class="row row-cols-sm-2 row-cols-lg-3">
+            <div class="row row-cols-md-2 row-cols-lg-4">
                 <div class="col">
                     <h4>Информация</h4>
                     <ul class="list-unstyled">
                         <li><a href="#">Главная</a></li>
                         <li><a href="#">Наши другие сайты</a></li>
                         <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Больше о Венеции</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%B5%D1%86%D0%B8%D1%8F">Wiki</a></li>
+                        <li><a href="https://planetofhotels.com/guide/ru/italiya/veneciya">Путеводитель</a></li>
+                        <li><a href="https://www.pac.ru/guide/italy/veneto/venice/">Отдых в Венеции</a></li>
                     </ul>
                 </div>
                 <div class="col">
