--- a/individual_site/share.html
+++ b/individual_site/share.html
@@ -8,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1655b4a318.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="share.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -27,10 +28,10 @@
                     <a class="nav-link" aria-current="page" href="index.html">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="history.html">История</a>
+                    <a class="nav-link" href="history.html">О городе</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="share.html">Поделиться воспоминанием</a>
+                    <a class="nav-link active" href="share.html">Поделиться историей</a>
                 </li>
             </ul>
 
@@ -38,20 +39,68 @@
     </div>
 </nav>
 <section class="main-content">
-    <div id="main-carousel" class="main-carousel carousel slide container-fluid" data-ride="carousel" data-bs-interval="3000">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="img/3.jpg" alt="Second slide">
+    <div class="share container-fluid px-lg-5 px-sm-2">
+        <h1 class="bg-dark rounded p-1">Расскажите историю связанную с этим чудесным городом</h1>
+        <form>
+            <div class="form-group">
+                <label for="inputName">Имя</label>
+                <input type="text" class="form-control" id="inputName" aria-describedby="nameHelp" placeholder="Ваше имя">
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/2.jpg" alt="First slide">
+            <div class="form-group h-50 pt-1">
+                <label for="exampleFormControlTextarea1">История</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Место для вашего рассказа"></textarea>
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/1.jpg" alt="Third slide">
+            <div class="form-group mt-5">
+                <label for="exampleFormControlFile1">Прикрепить фото к истории</label>
+                <br>
+                <input type="file" class="form-control-file" id="exampleFormControlFile1">
             </div>
-        </div>
+            <button type="submit" class="btn btn-primary mt-3 bg-dark border-dark">Отправить в редакцию</button>
+        </form>
     </div>
 </section>
+
+<footer>
+    <section class="footer bg-dark">
+        <div class="container-fluid">
+            <div class="row row-cols-md-2 row-cols-lg-4">
+                <div class="col">
+                    <h4>Информация</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Главная</a></li>
+                        <li><a href="#">Наши другие сайты</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Больше о Венеции</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%B5%D1%86%D0%B8%D1%8F">Wiki</a></li>
+                        <li><a href="https://planetofhotels.com/guide/ru/italiya/veneciya">Путеводитель</a></li>
+                        <li><a href="https://www.pac.ru/guide/italy/veneto/venice/">Отдых в Венеции</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Контакты</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="tel:123456740">123 4567-40</a></li>
+                        <li><a href="tel:123456751">123 4567-51</a></li>
+                        <li><a href="tel:123456762">123 4567-62</a></li>
+                        <li><a href="tel:123456773">123 4567-73</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Мы в сети</h4>
+                    <ul class="footer-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-telegram"></i></a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+</footer>
 
 </body>
 </html>
